# fast_file_search

./: CMakeLists.txt  README.txt  generate_large_file.py  main.cpp
